<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/background"

    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title_str"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:textColor="#eee"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_sidenote_str"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:textColor="#eee"
        />

    <Button
        android:id="@+id/main_button_id"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/main_button_str"
        android:textSize="15sp"
        android:padding="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        />

</LinearLayout>
