<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    tools:context="co.trevercullen.notetaking.AddActivity">

    <EditText
        android:id="@+id/add_title_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:singleLine="true"
        android:hint="@string/add_note_title_str"
        android:gravity="center"
        android:layout_row="0"
        android:layout_column="0"
        />

    <EditText
        android:id="@+id/add_desc_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/add_note_hint_str"
        android:gravity="start"
        android:lines="16"
        android:layout_row="1"
        android:layout_column="0"
        />

    <Button
        android:id="@+id/add_button_id"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/add_button_str"
        android:textSize="15sp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        />

</GridLayout>
